--- a/1A2B/index.html
+++ b/1A2B/index.html
@@ -17,15 +17,16 @@
 </head>
 
 <body>
+    <h2 class="text-center text-light py-3">1A2B Game</h2>
     <div class="container">
-        <div class="row justify-content-center my-3">
+        <div class="row justify-content-center">
             <button id="startBtn" class="btn btn-primary d-block col-3 mx-2">開始遊戲</button>
             <button id="resetBtn" class="btn btn-primary d-block col-3 mx-2">重新遊戲</button>
             <button id="showAnswerBtn" class="btn btn-primary d-block col-3 mx-2">查看答案</button>
         </div>
         <div class="row">
             <div class="col-12">
-                <h4 class="text-center">遊戲紀錄</h4>
+                <h4 class="text-center text-light my-3">遊戲紀錄</h4>
                 <ul id="recordList" class="list-group">
                     <!-- <li class="list-group-item">1</li> -->
                 </ul>
