--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -26,7 +26,10 @@
 <body>
     <div class="container">
         <div class="row my-3">
-            <div class="col-12 text-right">
+            <div class="col-6">
+               <p id="clock" class="h3"></p>
+            </div>
+            <div class="col-6 text-right">
                 <button type="button" class="btn btn-info btn-circle btn-xl" data-toggle="modal"
                     data-target="#todoModal" id="addTodoBtn">
                     <i class="fas fa-plus"></i>
