update chartjs hw
update chartjs hw

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                         class="badge badge-primary mx-2">2020/07/30</span>MaskMap口罩地圖</a>
             </li>
             <li class="list-group-item">
+                <a href="ChartJS/index.html" target="_blank" class="text-primary h4"><span
+                        class="badge badge-primary mx-2">2020/08/04</span>jQueryAJAX with Chart.js</a>
+            </li>
+            <li class="list-group-item">
                 <a href="Calendar/index.html" target="_blank" class="text-primary h4"><span
                         class="badge badge-primary mx-2">2020/08/05</span>行事曆</a>
             </li>
