--- a/index.html
+++ b/index.html
@@ -31,61 +31,70 @@
         </div>
     </div>
     <div class="container">
-        <ul class="list-group py-2">
-            <li class="list-group-item">
-                <a href="curriculum/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/06/24</span>國小課表Table手刻練習</a>
-            </li>
-            <li class="list-group-item">
-                <a href="Anilove/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/06/29</span>Anilove網站切版(無RWD)</a>
-            </li>
-            <li class="list-group-item">
-                <a href="Naturio/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/03</span>Naturio網站切版(無RWD)</a>
-            </li>
-            <li class="list-group-item">
-                <a href="Toyota/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/06</span>TOYOTA切版_Position練習(無RWD)</a>
-            </li>
-            <li class="list-group-item">
-                <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網復刻切版(有RWD)</a>
-            </li>
-            <li class="list-group-item">
-                <a href="TAKEN/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/16</span>TAKEN切版(使用Bootstrap、含RWD)</a>
-            </li>
-            <li class="list-group-item">
-                <a href="AppleProduct/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/23</span>Apple產品塊(DOM事件監聽)</a>
-            </li>
-            <li class="list-group-item">
-                <a href="1A2B/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/24</span>1A2B遊戲</a>
-            </li>
-            <li class="list-group-item">
-                <a href="calculator/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/24</span>計算機實作</a>
-            </li>
-            <li class="list-group-item">
-                <a href="NapoliPizza/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/27</span>Pizza Card(AJAX)</a>
-            </li>
-            <li class="list-group-item">
-                <a href="MaskMap/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/07/30</span>MaskMap口罩地圖</a>
-            </li>
-            <li class="list-group-item">
-                <a href="ChartJS/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/08/04</span>jQueryAJAX with Chart.js</a>
-            </li>
-            <li class="list-group-item">
-                <a href="Calendar/index.html" target="_blank" class="text-primary h4"><span
-                        class="badge badge-primary mx-2">2020/08/05</span>行事曆</a>
-            </li>
-        </ul>
-
+        <div class="row">
+            <div class="col-6">
+                <h3 class="text-center">CSS</h3>
+                <ul class="list-group py-2">
+                    <li class="list-group-item">
+                        <a href="curriculum/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/06/24</span>國小課表Table手刻練習</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="Anilove/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/06/29</span>Anilove網站切版(無RWD)</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="Naturio/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/03</span>Naturio網站切版(無RWD)</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="Toyota/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/06</span>TOYOTA切版_Position練習(無RWD)</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="BuildSchool-remake/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/09</span>BuildSchool官網復刻切版(有RWD)</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="TAKEN/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/16</span>TAKEN切版(使用Bootstrap、含RWD)</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6">
+                <h3 class="text-center">JavaScript</h3>
+                <ul class="list-group py-2">
+                    <li class="list-group-item">
+                        <a href="AppleProduct/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/23</span>Apple產品塊(DOM事件監聽)</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="1A2B/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/24</span>1A2B遊戲</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="calculator/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/24</span>計算機實作</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="NapoliPizza/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/27</span>Pizza Card(AJAX)</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="MaskMap/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/07/30</span>MaskMap口罩地圖</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="ChartJS/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/08/04</span>jQueryAJAX with Chart.js</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="Calendar/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/08/05</span>行事曆</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div class="text-center py-2 text-secondary">
