--- a/Sliding-Puzzle-Game/index.html
+++ b/Sliding-Puzzle-Game/index.html
@@ -33,7 +33,11 @@
     <div class="settings mb-2">
       <span class="text-danger">請選擇難度：</span>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3" checked>
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" checked>
+        <label class="form-check-label" for="inlineRadio1">2*2</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3">
         <label class="form-check-label" for="inlineRadio1">3*3</label>
       </div>
       <div class="form-check form-check-inline">
@@ -93,8 +97,6 @@
     resetBtn.addEventListener('click', resetGame);
 
 
-
-
     function startGame() {
       let selectedSize = getRadioValue();
       let selectedImg = this.files[0];//inputfile上傳的資料會在files[0]
@@ -127,12 +129,12 @@
     }
 
     function movepuzzle() {
-      console.log(this);
+
+      console.log(this.id);
     }
 
     function resetGame() {
       uploadImg.value = '';//清空input的value，這樣選同一張圖片才能觸發change事件
-      puzzles.length = 0;
       imgPreview.src = "";
       gameMapContent.innerHTML = '';
       uploadImg.disabled = false;
@@ -150,7 +152,11 @@
           let div = document.createElement("div");
           let puzzleSize = (500 / size);
 
-          div.classList.add("border", "puzzle", `puzzle${(i + 1) + '' + (j + 1)}`);
+          div.classList.add("border", "puzzle");
+          if (i == 0 && j == 0) {
+            div.classList.add("empty");
+          }
+          div.setAttribute("id",`${(i + 1) + '' + (j + 1)}`);
           div.style.height = `${puzzleSize}px`;
           div.style.width = `${puzzleSize}px`;
           div.style.backgroundImage = `url('${imgUrl}')`;
