--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                         <a href="Calendar/index.html" target="_blank" class="text-primary h5"><span
                                 class="badge badge-primary mx-2">2020/08/05</span>行事曆</a>
                     </li>
+                    <li class="list-group-item">
+                        <a href="Sliding-Puzzle-Game/index.html" target="_blank" class="text-primary h5"><span
+                                class="badge badge-primary mx-2">2020/08/05</span>N-Puzzle</a>
+                    </li>
                 </ul>
             </div>
         </div>
