--- a/Sliding-Puzzle-Game/index.html
+++ b/Sliding-Puzzle-Game/index.html
@@ -20,14 +20,19 @@
 
 <body>
   <div class="container">
-    <div class="my-4">
-      <div class="input-group">
-        <div class="custom-file">
-          <input type="file" class="custom-file-input" id="uploadImg" accept="image/*">
-          <label class="custom-file-label" for="uploadImg">請選擇圖片檔案...</label>
+    <div class="row my-3">
+      <div class="col-10">
+        <div class="input-group">
+          <div class="custom-file">
+            <input type="file" class="custom-file-input" id="uploadImg" accept="image/*">
+            <label class="custom-file-label" for="uploadImg">請選擇圖片檔案...</label>
+          </div>
         </div>
+        <small class="ml-2 text-secondary">請上傳長寬約比1:1之圖片</small>
       </div>
-      <small class="ml-2 text-secondary">請上傳長寬約比1:1之圖片</small>
+      <div class="col-2">
+        <button id="examplePicBtn" class="btn btn-info">使用範例圖片</button>
+      </div>
     </div>
 
     <div class="settings mb-2">
@@ -37,25 +42,24 @@
         <label class="form-check-label" for="inlineRadio1">2*2</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3">
-        <label class="form-check-label" for="inlineRadio1">3*3</label>
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="3">
+        <label class="form-check-label" for="inlineRadio2">3*3</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="4">
-        <label class="form-check-label" for="inlineRadio2">4*4</label>
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="4">
+        <label class="form-check-label" for="inlineRadio3">4*4</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="5">
-        <label class="form-check-label" for="inlineRadio3">5*5</label>
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="5">
+        <label class="form-check-label" for="inlineRadio4">5*5</label>
       </div>
     </div>
-    <button id="shuffleBtn" class="btn btn-info mb-2" disabled>隨機排序</button>
     <button id="resetBtn" class="btn btn-danger mb-2" disabled>重新再來</button>
 
     <div class="row">
       <div class="col-12 col-lg-6">
         <div id="gameMap" class="d-flex">
-          <div class="row m-0">
+          <div class="row m-0 position-relative">
 
           </div>
         </div>
@@ -86,34 +90,52 @@
 
   <script>
     let uploadImg = document.querySelector("#uploadImg");
+    let examplePicBtn = document.querySelector("#examplePicBtn");
     let gameMapContent = document.querySelector("#gameMap .row");
     let imgPreview = document.querySelector("#imgPreview");
     let resetBtn = document.querySelector("#resetBtn");
-    let shuffleBtn = document.querySelector("#shuffleBtn");
     let Options = document.querySelectorAll(".form-check-input");
+    let puzzleSize;
+    let puzzles;
+    let moveRecord = [];
+    let answer = [];
+    let nowAns = [];
+    let winID;
     uploadImg.addEventListener('change', startGame);
+    examplePicBtn.addEventListener('click', startGame);
     resetBtn.addEventListener('click', resetGame);
 
 
     function startGame() {
+
       let selectedSize = getRadioValue();
-      let selectedImg = this.files[0];//inputfile上傳的資料會在files[0]
-      const imgUrl = URL.createObjectURL(selectedImg);//讓該圖片產生url
+      let imgUrl;
+      if (this.id == 'examplePicBtn') {
+        imgUrl = './duke.jpg';
+      }
+      else {
+        let selectedImg = this.files[0];//inputfile上傳的資料會在files[0]
+        imgUrl = URL.createObjectURL(selectedImg);//讓該圖片產生url
+      }
+
       imgPreview.src = imgUrl;
       uploadImg.disabled = true;
       Options.forEach(x => {
         x.disabled = true;
       })
-      shuffleBtn.disabled = false;
       resetBtn.disabled = false;
+      examplePicBtn.disabled = true;
 
       gameMapContent.classList.add("border");
       createPuzzles(imgUrl, selectedSize);
 
-      let puzzles = document.querySelectorAll(".puzzle");
+      puzzles = Array.from(document.querySelectorAll(".puzzle"));
       puzzles.forEach(x => {
-        x.addEventListener("click", movepuzzle)
+        x.addEventListener("click", function () {
+          movePuzzle(this);
+        })
       })
+      shuffle();
     }
 
     function getRadioValue() {
@@ -126,43 +148,105 @@
       return val;
     }
 
-    function movepuzzle() {
-
-      console.log(this.id);
-    }
-
-    function resetGame() {
-      uploadImg.value = '';//清空input的value，這樣選同一張圖片才能觸發change事件
-      imgPreview.src = "";
-      gameMapContent.innerHTML = '';
-      uploadImg.disabled = false;
-      Options.forEach(x => {
-        x.disabled = false;
-      })
-      shuffleBtn.disabled = true;
-      resetBtn.disabled = true;
-      gameMapContent.classList.remove("border");
-    }
-
     function createPuzzles(imgUrl, size) {
       for (let i = 0; i < size; i++) {
         for (let j = 0; j < size; j++) {
           let div = document.createElement("div");
-          let puzzleSize = (500 / size);
-
+          puzzleSize = (500 / size);
           div.classList.add("border", "puzzle");
           if (i == 0 && j == 0) {
             div.classList.add("empty");
           }
-          div.setAttribute("id",`${(i + 1) + '' + (j + 1)}`);
           div.style.height = `${puzzleSize}px`;
           div.style.width = `${puzzleSize}px`;
+          div.style.position = "absolute";
+          div.style.left = `${Math.floor(j) * puzzleSize}px`;
+          div.style.top = `${Math.floor(i) * puzzleSize}px`;
           div.style.backgroundImage = `url('${imgUrl}')`;
-          div.style.backgroundPosition = `-${Math.floor(j) * puzzleSize}px -${Math.floor(i) * puzzleSize}px`;//成功
+          div.style.backgroundPosition = `-${Math.floor(j) * puzzleSize}px -${Math.floor(i) * puzzleSize}px`;
           gameMapContent.append(div)
+
+          answer.push({ left: `${Math.floor(j) * puzzleSize}px`, top: `${Math.floor(i) * puzzleSize}px` });//save position to answer
 
         }
       }
+    }
+
+    function shuffle() {
+      let count = 0;
+      while (count < 100) {
+        let randomCount = Math.floor(Math.random() * puzzles.length);
+        console.log(randomCount);
+
+        movePuzzle(puzzles[randomCount]);
+        moveRecord.push(randomCount);
+        count++;
+      }
+    }
+
+    function movePuzzle(thisPuzzle) {
+      let emptyPuzzle = document.querySelector(".empty");
+      let clickPuzzleIndex = puzzles.indexOf(thisPuzzle);
+      let emptyIndex = puzzles.findIndex((item) => { return item.classList.contains("empty"); })
+      let left = thisPuzzle.offsetLeft;
+      let top = thisPuzzle.offsetTop;
+      let targetLeft = puzzles[emptyIndex].offsetLeft;
+      let targetTop = puzzles[emptyIndex].offsetTop;
+
+      if (CanMoveOrNot(left, top, targetLeft, targetTop)) {
+        let tempX = left + 'px';
+        let tempY = top + 'px';
+        puzzles[clickPuzzleIndex].style.left = puzzles[emptyIndex].style.left;
+        puzzles[clickPuzzleIndex].style.top = puzzles[emptyIndex].style.top;
+        puzzles[emptyIndex].style.left = tempX;
+        puzzles[emptyIndex].style.top = tempY;
+
+        if (moveRecord.length >= 100) {
+          moveRecord.push(clickPuzzleIndex);
+          checkWin(puzzles);
+        }
+      }
+    }
+
+    function CanMoveOrNot(left, top, targetLeft, targetTop) {
+      //check left right
+      if (Math.abs(top - targetTop) == 0 && Math.abs(left - targetLeft) <= Math.ceil(puzzleSize)) {
+        return true;
+      }
+      //check up down
+      if (Math.abs(left - targetLeft) == 0 && Math.abs(top - targetTop) <= Math.ceil(puzzleSize)) {
+        return true;
+      }
+      return false;
+    }
+
+    function checkWin(nowAnsArray) {
+      let result = 0;
+      for (let i = 0; i < nowAnsArray.length; i++) {
+        if (nowAnsArray[i].style.top == answer[i].top && nowAnsArray[i].style.left == answer[i].left) {
+          result++;
+        }
+      }
+      if (result == nowAnsArray.length) {
+        winID = setTimeout(() => {
+          alert("You win！");
+        }, 500);
+      }
+    }
+
+    function resetGame() {
+      moveRecord.length = 0;//清空紀錄
+      uploadImg.value = '';//清空input的value，這樣選同一張圖片才能觸發change事件
+      imgPreview.src = "";
+      gameMapContent.innerHTML = '';
+      uploadImg.disabled = false;
+      examplePicBtn.disabled = false;
+      Options.forEach(x => {
+        x.disabled = false;
+      })
+      resetBtn.disabled = true;
+      gameMapContent.classList.remove("border");
+      clearTimeout(winID);
     }
 
 
