--- a/Sliding-Puzzle-Game/index.html
+++ b/Sliding-Puzzle-Game/index.html
@@ -31,7 +31,7 @@
         <small class="ml-2 text-secondary">請上傳長寬約比1:1之圖片</small>
       </div>
       <div class="col-2">
-        <button id="examplePicBtn" class="btn btn-info">使用範例圖片</button>
+        <button id="examplePicBtn" class="btn btn-primary">使用範例圖片</button>
       </div>
     </div>
 
@@ -54,8 +54,13 @@
         <label class="form-check-label" for="inlineRadio4">5*5</label>
       </div>
     </div>
-    <button id="resetBtn" class="btn btn-danger mb-2" disabled>重新再來</button>
 
+    <div class="text-center">
+      <button id="resetBtn" class="btn btn-danger m-2 btnSet" disabled>重新再來</button>
+      <button id="gobackOne" class="btn btn-warning m-2 btnSet" disabled>提示一步</button>
+      <button id="gobackAll" class="btn btn-success m-2 btnSet" disabled>一鍵還原</button>
+    </div>
+   
     <div class="row">
       <div class="col-12 col-lg-6">
         <div id="gameMap" class="d-flex">
