--- a/Sliding-Puzzle-Game/index.html
+++ b/Sliding-Puzzle-Game/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="settings mb-2">
-      <span class="text-danger">請選擇難度：</span>
+      <span class="text-danger h6">請選擇難度：</span>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" checked>
         <label class="form-check-label" for="inlineRadio1">2*2</label>
@@ -59,8 +59,10 @@
       <button id="resetBtn" class="btn btn-danger m-2 btnSet" disabled>重新再來</button>
       <button id="gobackOne" class="btn btn-warning m-2 btnSet" disabled>提示一步</button>
       <button id="gobackAll" class="btn btn-success m-2 btnSet" disabled>一鍵還原</button>
+
+      <span id="timer" class="h5">0分0秒</span>
     </div>
-   
+
     <div class="row">
       <div class="col-12 col-lg-6">
         <div id="gameMap" class="d-flex">
@@ -81,7 +83,6 @@
     </div>
 
   </div>
-
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
