--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 </head>
 
 <body>
-    <div class="jumbotron">
+    <div class="jumbotron bg-cover"
+        style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100%), url(https://placeimg.com/2000/480/nature)">
         <div class="container">
             <div class="avatarbox">
-                <img class="w-100 rounded-circle" src="avatar.jpg" alt="">
+                <img class="w-100 rounded-circle" src="octocat.png" alt="">
             </div>
-            <h4 class="text-info">Tim Chen</h4>
-            <h1 class="text-info">Build School 作業列表</h1>
+            <h2 class="text-info">Tim Chen</h2>
+            <p class="text-info">Build School 作業列表</p>
         </div>
     </div>
     <div class="container">
